Wed Aug  8 22:57:05 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* HACKING: added John Fleck right to commit in the doc subdir

Tue Aug  7 03:11:31 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: for heriting defaulted atts from the DTD
	* tests/docs/Makefile.am tests/docs/bug-52.xml tests/docs/bug-53.xml
	  tests/general/Makefile.am tests/general/bug-52.*
	  tests/general/bug-53.*: Added a few new tests for recently fixed
	  stuff in libxml
	* tests/xmlspec/REC-xml-20001006-review.html
	  tests/xmlspec/REC-xml-20001006.html: inheriting default attrs from
	  DTD changed the result by adding extra attributes to the HTML output

2001-08-06  Peter Williams  <peterw@ximian.com>

	* libexslt/Makefile.am, xsltproc/Makefile.am: Fixes for compiling
	when srcdir != builddir.

Sun Aug  5 09:37:14 CEST 2001 Thomas Broyer <tbroyer@ltgt.net>

	* libxslt/extensions.[ch] libxslt/preproc.[ch] libxslt/transform.c
	  libxslt/xslt.c libxslt/xsltInternals.h: modified extension framework
	  to easify extension element precomputation.
	* libexslt/functions.c: uses the new framework and precomputes
	  func:result elements.

Sat Aug  4 20:42:32 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: bug fix on output="text" from Nicolas Marsgui

Fri Aug  3 14:23:25 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* tests/general/bug-21-.out tests/general/bug-31-.out:
	  this got fixed by libxml patches
	* win32/readme.msvc win32/dsp/* xsltproc/xsltproc.c
	  Makefile.am libexslt/exslt.[ch] libexslt/exsltconfig.h.in
	  libexslt/functions.c libexslt/math.c libxslt/win32config.h
	  libxslt/xsltconfig.h.in libxslt/xsltutils.h
	  libxslt/xsltwin32config.h libxslt/xsltwin32config.h.in:
	  Applied Igor  Zlatkovic Win32 Facelift No.2 patch, and fixed
	  a few things related to those changes.

Wed Aug  1 13:58:21 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/xsltutils.c: well one need one \n after DOCTYPE