@@ -1,3 +1,12 @@
+Sun Aug 12 21:53:13 CEST 2001 Daniel Veillard <daniel@veillard.com>
+
+	* libxslt/functions.c libxslt/keys.c libxslt/transform.c 
+	  libxslt/xsltutils.h: cleaned up the code w.r.t. handling
+	  of 'non-standard' libxml element like namespace nodes.
+	* tests/docs/Makefile.am tests/docs/bug-54.xml
+	  tests/general/Makefile.am tests/general/bug-54.*: added a 
+	  specific example in the regression tests
+
 Wed Aug  8 22:57:05 CEST 2001 Daniel Veillard <daniel@veillard.com>
 
 	* HACKING: added John Fleck right to commit in the doc subdir
